Mengedit Tampilan Program Pelatihan

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
           <li>Kelas Nahwu 2</li>
         </ul>
       </section>
-      <section>
+      <section class="informasi">
         <h1>Informasi Pelatihan</h1>
         <p>
           Kelas Nuriddin Institute Diadakan Pada hari dan waktu yang telah disediakan dan sepakati diantaranya ;
