--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <a href="#"><b>Berita dan Artikel</b></a>
         </li>
         <li style="background-color: #ABE7C0;">
-          <a href="#" ><b>Galeri dan Video</b></a>
+          <a href="#"><b>Galeri dan Video</b></a>
         </li>
         <li style="background-color: #A5CDF3;">
           <a href="#Kontak"><b>Kontak Nuruddin Institute</b></a>
@@ -49,29 +49,29 @@
         <div class="container">
           <div class="kiri">
             <h1>
-            <pre>
+              <pre>
           Selamat Datang
           Di Website 
           Nuruddin Institute
-            </pre>
-          </h1>
+              </pre>
+            </h1>
+          </div>
+          <div class="kanan">
+            <img src="img/welcome.jpg" alt="Kelas Yang Terdiri dari Kelas Sharaf, Nahwu dan Kelas Baca Kitab">
+          </div>
         </div>
-        <div class="kanan">
-          <img src="img/welcome.jpg" alt="Kelas Yang Terdiri dari Kelas Sharaf, Nahwu dan Kelas Baca Kitab">
-        </div>
-      </div>
-      <p>Website Yang Bertujuan Untuk Menyediakan Informasi 
-        Tentang Pembelajaran Bahasa Arab Kami
-      </p>
+        <p>Website Yang Bertujuan Untuk Menyediakan Informasi 
+          Tentang Pembelajaran Bahasa Arab Kami
+        </p>
       </section>
       <section class="profil">
         <h1>Tentang Kami</h1>
-            <p>
-              Nuruddin Institute adalah organasi pendidikan yang berfokus pada pembelajaran bahasa dari dasar hingga
-              bisa membaca kitab gundul, selain itu nurudiin institute juga memberikan pengetahuan terkait isi dari
-              kitab
-              kitab yang dipelajari dan akan didiskusikan setiap bulannya.
-            </p>
+        <p>
+          Nuruddin Institute adalah organasi pendidikan yang berfokus pada pembelajaran bahasa dari dasar hingga
+          bisa membaca kitab gundul, selain itu nurudiin institute juga memberikan pengetahuan terkait isi dari
+          kitab
+          kitab yang dipelajari dan akan didiskusikan setiap bulannya.
+        </p>
       </section>
       <section class="program">
         <h1>Program Pelatihan</h1>
@@ -88,122 +88,125 @@
         <p>
           Kelas Nuriddin Institute Diadakan Pada hari dan waktu yang telah disediakan dan sepakati diantaranya ;
         </p>
-        <table border="1" cellpadding="5">
-          <thead bgcolor="yellow">
-            <th>Kelas</th>
-            <th>Hari</th>
-            <th>Jam</th>
+        <table class="styled-table">
+          <thead>
+            <tr>
+              <th>Kelas</th>
+              <th>Hari</th>
+              <th>Jam</th>
+            </tr>
           </thead>
-          <tr>
-            <td>Kelas Sharaf 1</td>
-            <td>Sabtu</td>
-            <td>13.00 - 15.00</td>
-          </tr>
-          <tr>
-            <td>Kelas Sharaf 1</td>
-            <td>Sabtu</td>
-            <td>16.20 - 18.20</td>
-          </tr>
-          <tr>
-            <td>Kelas Sharaf 1</td>
-            <td>Minggu</td>
-            <td>13.00 - 15.00</td>
-          </tr>
-          <tr>
-            <td>Kelas Sharaf 1</td>
-            <td>Minggu</td>
-            <td>16.20 - 18.20</td>
-          </tr>
-          <tr>
-            <td>Kelas Sharaf 2</td>
-            <td>Sabtu</td>
-            <td>13.00 - 15.00</td>
-          </tr>
-          <tr>
-            <td>Kelas Sharaf 2</td>
-            <td>Sabtu</td>
-            <td>16.20 - 18.20</td>
-          </tr>
-          <tr>
-            <td>Kelas Sharaf 2</td>
-            <td>Minggu</td>
-            <td>13.00 - 15.00</td>
-          </tr>
-          <tr>
-            <td>Kelas Sharaf 2</td>
-            <td>Minggu</td>
-            <td>16.20 - 18.20</td>
-          </tr>
-          <tr>
-            <td>Kelas Sharaf 3</td>
-            <td>Sabtu</td>
-            <td>13.00 - 15.00</td>
-          </tr>
-          <tr>
-            <td>Kelas Sharaf 3</td>
-            <td>Sabtu</td>
-            <td>16.20 - 18.20</td>
-          </tr>
-          <tr>
-            <td>Kelas Sharaf 3</td>
-            <td>Minggu</td>
-            <td>13.00 - 15.00</td>
-          </tr>
-          <tr>
-            <td>Kelas Sharaf 3</td>
-            <td>Minggu</td>
-            <td>16.20 - 18.20</td>
-          </tr>
-          <tr>
-            <td>Kelas Nahwu 1</td>
-            <td>Sabtu</td>
-            <td>13.00 - 15.00</td>
-          </tr>
-          <tr>
-            <td>Kelas Nahwu 1</td>
-            <td>Sabtu</td>
-            <td>16.20 - 18.20</td>
-          </tr>
-          <tr>
-            <td>Kelas Nahwu 1</td>
-            <td>Minggu</td>
-            <td>13.00 - 15.00</td>
-          </tr>
-          <tr>
-            <td>Kelas Nahwu 1</td>
-            <td>Minggu</td>
-            <td>16.20 - 18.20</td>
-          </tr>
-          <tr>
-            <td>Kelas Nahwu 2</td>
-            <td>Sabtu</td>
-            <td>13.00 - 15.00</td>
-          </tr>
-          <tr>
-            <td>Kelas Nahwu 2</td>
-            <td>Sabtu</td>
-            <td>16.20 - 18.20</td>
-          </tr>
-          <tr>
-            <td>Kelas Nahwu 2</td>
-            <td>Minggu</td>
-            <td>13.00 - 15.00</td>
-          </tr>
-          <tr>
-            <td>Kelas Nahwu 2</td>
-            <td>Minggu</td>
-            <td>16.20 - 18.20</td>
-          </tr>
-          <tr>
-            <td>Kelas Diskusi</td>
-            <td>Minggu</td>
-            <td>19.30 - 21.30</td>
-          </tr>
+          <tbody>
+            <tr>
+              <td>Kelas Sharaf 1</td>
+              <td>Sabtu</td>
+              <td>13.00 - 15.00</td>
+            </tr>
+            <tr>
+              <td>Kelas Sharaf 1</td>
+              <td>Sabtu</td>
+              <td>16.20 - 18.20</td>
+            </tr>
+            <tr>
+              <td>Kelas Sharaf 1</td>
+              <td>Minggu</td>
+              <td>13.00 - 15.00</td>
+            </tr>
+            <tr>
+              <td>Kelas Sharaf 1</td>
+              <td>Minggu</td>
+              <td>16.20 - 18.20</td>
+            </tr>
+            <tr>
+              <td>Kelas Sharaf 2</td>
+              <td>Sabtu</td>
+              <td>13.00 - 15.00</td>
+            </tr>
+            <tr>
+              <td>Kelas Sharaf 2</td>
+              <td>Sabtu</td>
+              <td>16.20 - 18.20</td>
+            </tr>
+            <tr>
+              <td>Kelas Sharaf 2</td>
+              <td>Minggu</td>
+              <td>13.00 - 15.00</td>
+            </tr>
+            <tr>
+              <td>Kelas Sharaf 2</td>
+              <td>Minggu</td>
+              <td>16.20 - 18.20</td>
+            </tr>
+            <tr>
+              <td>Kelas Sharaf 3</td>
+              <td>Sabtu</td>
+              <td>13.00 - 15.00</td>
+            </tr>
+            <tr>
+              <td>Kelas Sharaf 3</td>
+              <td>Sabtu</td>
+              <td>16.20 - 18.20</td>
+            </tr>
+            <tr>
+              <td>Kelas Sharaf 3</td>
+              <td>Minggu</td>
+              <td>13.00 - 15.00</td>
+            </tr>
+            <tr>
+              <td>Kelas Sharaf 3</td>
+              <td>Minggu</td>
+              <td>16.20 - 18.20</td>
+            </tr>
+            <tr>
+              <td>Kelas Nahwu 1</td>
+              <td>Sabtu</td>
+              <td>13.00 - 15.00</td>
+            </tr>
+            <tr>
+              <td>Kelas Nahwu 1</td>
+              <td>Sabtu</td>
+              <td>16.20 - 18.20</td>
+            </tr>
+            <tr>
+              <td>Kelas Nahwu 1</td>
+              <td>Minggu</td>
+              <td>13.00 - 15.00</td>
+            </tr>
+            <tr>
+              <td>Kelas Nahwu 1</td>
+              <td>Minggu</td>
+              <td>16.20 - 18.20</td>
+            </tr>
+            <tr>
+              <td>Kelas Nahwu 2</td>
+              <td>Sabtu</td>
+              <td>13.00 - 15.00</td>
+            </tr>
+            <tr>
+              <td>Kelas Nahwu 2</td>
+              <td>Sabtu</td>
+              <td>16.20 - 18.20</td>
+            </tr>
+            <tr>
+              <td>Kelas Nahwu 2</td>
+              <td>Minggu</td>
+              <td>13.00 - 15.00</td>
+            </tr>
+            <tr>
+              <td>Kelas Nahwu 2</td>
+              <td>Minggu</td>
+              <td>16.20 - 18.20</td>
+            </tr>
+            <tr>
+              <td>Kelas Diskusi</td>
+              <td>Minggu</td>
+              <td>19.30 - 21.30</td>
+            </tr>
+          </tbody>
         </table>
       </section>
-      <section>
+      <section class="topik">
         <h1>Berita dan Artikel</h1>
-        <h3>Berita</h3>
         <div class="berita">
           <ul>
             <li>
@@ -217,38 +220,9 @@
             </li>
           </ul>
         </div>
-        <h3>Artikel</h3>
-        <div class="artikel">
-          <ul>
-            <li>
-              <a href="https://www.instagram.com/p/CxEjCTvy9X8/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA=="
-                target="_blank">
-                <figure>
-                  <img src="img/artikel1.png" alt="Keseharianmu" width="150px" height="100px">
-                  <figcaption><i>Keseharianmulah yang Menentukan</i></figcaption>
-                </figure>
-              </a>
-            </li>
-          </ul>
-        </div>
       </section>
-      <section>
-        <h1>
-          Galeri dan Video
-        </h1>
-        <h3>Galeri</h3>
-        <div class="galeri">
-          <ul>
-            <li>
-              <figure>
-                <img src="img/galeri1.jpg" alt="Sharing & Diskusi Teori adler" width="150px" height="100px">
-                <figcaption>Kegiatan Sharing tanggapan dan pengetahuan terhadap teori Adler </figcaption>
-              </figure>
-              </a>
-            </li>
-          </ul>
-        </div>
-        <h3>Video</h3>
+      <section class="media">
+        <h1>Galeri dan Video</h1>
         <div class="video">
           <iframe width="560" height="315" src="https://www.youtube.com/embed/tz-Eitr5pQg?si=VgD8lwkrB4XVbKrx"
             title="YouTube video player" frameborder="0"
@@ -257,48 +231,18 @@
         </div>
         <br>
       </section>
-      <section>
-        <fieldset>
-          <legend>Anda Berminat Untuk Bergabung Bersama Kami ? Daftarkan diri anda Segera melalui Form Dibawah ini
-          </legend>
-          <form action="">
-            <ul>
-              <li>
-                <label for="nama">Masukan Nama Lengkap Anda :</label>
-                <input type="text" name="nama" id="nama" />
-              </li>
-              <br>
-              <li>
-                <label for="email">Masukan Email Anda :</label>
-                <input type="email" name="email" id="email" />
-              </li>
-              <br>
-              <li>
-                <label for="nomor">Masukan Nomor Anda :</label>
-                <input type="number" name="nomor" id="nomor">
-              </li>
-              <br>
-              <input type="submit" value="Submit" />
-            </ul>
-        </fieldset>
-        </form>
-      </section>
-      <section>
-        <h1 id="Kontak">Kontak Kami</h1>
-        <ul>
-          <a href="https://www.instagram.com/nuruddin_institute/" target="_blank">
-            <li>Instagram </li>
-          </a>
-          <a href="https://wa.me/6281234567890" target="_blank">
-            <li>WhatsApp </li>
-          </a>
-        </ul>
-      </section>
     </article>
   </main>
-  <footer>
-    <p>&copy; 2023 Rendi Sutendi STMIK Mardira Indonesia </p>
-  </footer>
+      <footer class="kontak">
+        <h1 id="Kontak">Kontak Kami</h1>
+        <ul>
+          <li>
+            <a href="https://www.instagram.com/nuruddin_institute/" target="_blank">Instagram</a>
+          </li>
+          <li>
+            <a href="https://wa.me/6281234567890" target="_blank">WhatsApp</a>
+          </li>
+        </ul>
+      </footer>
 </body>
-
 </html>
