--- a/index.html
+++ b/index.html
@@ -47,7 +47,14 @@
   <main>
     <aside>
       <div class="top" onclick="goToTop()">
-        <i class="far fa-hand-pointer" style="color: white"></i>
+        <i class="far fa-hand-pointer" style="color: white" id="topButton"></i>
+      </div>
+      <div class="music-player">
+        <i class="fas fa-music" id="musicToggle"></i>
+        <audio id="backgroundMusic" loop>
+          <source src="audio/Ngoni.mp3" type="audio/mpeg">
+          Your browser does not support the audio element.
+        </audio>
       </div>
       <script>
         const goToTop = () => {
@@ -262,8 +269,6 @@
     <p>Copyright &copy; 2024 Rendi Sutendi 2024</p>
   </footer>
 
-  <a href="#header" class="top" aria-label="Kembali ke atas halaman"></a>
-
   <script>
     const animateOnScroll = () => {
       const elements = document.querySelectorAll('.profil, .program, .informasi, .topik, .media');
@@ -285,6 +290,65 @@
     };
 
     document.addEventListener('DOMContentLoaded', animateOnScroll);
+  </script>
+
+  <script>
+    const musicToggle = document.getElementById('musicToggle');
+    const backgroundMusic = document.getElementById('backgroundMusic');
+    let isPlaying = false;
+
+    musicToggle.addEventListener('click', () => {
+      if (isPlaying) {
+        backgroundMusic.pause();
+        musicToggle.classList.remove('playing');
+      } else {
+        backgroundMusic.play();
+        musicToggle.classList.add('playing');
+      }
+      isPlaying = !isPlaying;
+    });
+
+    // Fungsi untuk smooth scroll
+    function smoothScroll(target, duration) {
+      var target = document.querySelector(target);
+      var targetPosition = target.getBoundingClientRect().top;
+      var startPosition = window.pageYOffset;
+      var distance = targetPosition - startPosition;
+      var startTime = null;
+
+      function animation(currentTime) {
+        if (startTime === null) startTime = currentTime;
+        var timeElapsed = currentTime - startTime;
+        var run = ease(timeElapsed, startPosition, distance, duration);
+        window.scrollTo(0, run);
+        if (timeElapsed < duration) requestAnimationFrame(animation);
+      }
+
+      function ease(t, b, c, d) {
+        t /= d / 2;
+        if (t < 1) return c / 2 * t * t + b;
+        t--;
+        return -c / 2 * (t * (t - 2) - 1) + b;
+      }
+
+      requestAnimationFrame(animation);
+    }
+
+    // Event listener untuk tombol top
+    var topButton = document.getElementById('topButton');
+    topButton.addEventListener('click', function(e) {
+      e.preventDefault();
+      smoothScroll('body', 1000); // 1000ms = 1 detik durasi scroll
+    });
+
+    // Tampilkan/sembunyikan tombol top berdasarkan posisi scroll
+    window.addEventListener('scroll', function() {
+      if (window.pageYOffset > 300) {
+        topButton.style.display = 'flex';
+      } else {
+        topButton.style.display = 'none';
+      }
+    });
   </script>
 </body>
 
