--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <a href="#exerciseinfo"><b>Informasi Pelatihan</b></a>
         </li>
         <li style="background-color: #F69D96;">
-          <a href="#artikel"><b>Berita dan Artikel</b></a>
+          <a href="#artikel"><b>Artikel</b></a>
         </li>
         <li style="background-color: #ABE7C0;">
           <a href="#media"><b>Galeri dan Video</b></a>
@@ -75,7 +75,7 @@
           </div>
         </div>
         <p>Website Yang Bertujuan Untuk Menyediakan Informasi 
-          Tentang Pembelajaran Bahasa Arab Kami
+          Tentang Pembelajaran Bahasa Arab Nuruddin Institute
         </p>
       </section>
 
@@ -96,6 +96,7 @@
           <li>Kelas Sharaf 3</li>
           <li>Kelas Nahwu 1</li>
           <li>Kelas Nahwu 2</li>
+          <li>Kelas Baca Kitab</li>
         </ul>
       </section>
 
@@ -109,6 +110,7 @@
           <option value="semua">Semua Kelas</option>
           <option value="Sharaf">Kelas Sharaf</option>
           <option value="Nahwu">Kelas Nahwu</option>
+          <option value="Baca Kitab">Kelas Baca Kitab</option>
         </select>
         
         <table class="styled-table">
@@ -125,21 +127,24 @@
       </section>
 
       <section class="topik" id="artikel">
-        <h1>Galeri Foto dan Video</h1>
+        <h1>Artikel</h1>
         <div class="slideshow-container">
           <div class="mySlides fade">
-            <img src="img/artikel1.png" alt="Slide 1">
-            <div class="text">Kegiatan Belajar 1</div>
+           <a href="https://www.instagram.com/p/CKL-kyhLq6q/">
+             <img src="img/artikel1.jpg" alt="Waktu Takkan Terulang" style="border: solid white 3px; border-radius: 5px;">
+           </a>
           </div>
 
           <div class="mySlides fade">
-            <img src="img/artikel1.png" alt="Slide 2">
-            <div class="text">Kegiatan Belajar 2</div>
+            <a href="https://www.instagram.com/p/CKS2VCuhm55/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==">
+              <img src="img/artikel2.jpg" alt="Kemana Arah Langkahmu" style="border: solid white 3px; border-radius: 5px;"">
+            </a>
           </div>
 
           <div class="mySlides fade">
-            <img src="img/artikel1.png" alt="Slide 3">
-            <div class="text">Kegiatan Belajar 3</div>
+            <a href="https://www.instagram.com/p/CKjDLixBEsX/?utm_source=ig_web_copy_link&igsh=MzRlODBiNWFlZA==">
+              <img src="img/artikel3.jpg" alt="Ingat Hakikat Hidupmu" style="border: solid white 3px; border-radius: 5px;">
+            </a>
           </div>
 
           <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
@@ -158,18 +163,11 @@
         <h1>Galeri dan Video</h1>
         <div class="slideshow-container media-slideshow">
           <div class="mySlides fade">
-            <iframe width="300" height="200" src="https://www.youtube.com/embed/tz-Eitr5pQg?si=zo6Qcppv47NEpTL0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <div class="text">Kegiatan 1</div>
+            <img src="img/galeri1.jpg" alt="Kegiatan 1" style="border: solid white 3px; border-radius: 5px;">
           </div>
 
           <div class="mySlides fade">
-            <iframe width="300" height="200" src="https://www.youtube.com/embed/tz-Eitr5pQg?si=zo6Qcppv47NEpTL0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <div class="text">Kegiatan 2</div>
-          </div>
-
-          <div class="mySlides fade">
-            <iframe width="300" height="200" src="https://www.youtube.com/embed/tz-Eitr5pQg?si=zo6Qcppv47NEpTL0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-            <div class="text">Video Kegiatan</div>
+            <iframe width="500" height="300" src="https://www.youtube.com/embed/tz-Eitr5pQg?si=zo6Qcppv47NEpTL0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen style="border: solid white 3px; border-radius: 5px;"></iframe>
           </div>
 
           <a class="prev" onclick="plusSlidesMedia(-1)">&#10094;</a>
@@ -180,7 +178,6 @@
         <div style="text-align:center">
           <span class="dot" onclick="currentSlideMedia(1)"></span>
           <span class="dot" onclick="currentSlideMedia(2)"></span>
-          <span class="dot" onclick="currentSlideMedia(3)"></span>
         </div>
       </section>
     </article>
