--- a/menu/login.html
+++ b/menu/login.html
@@ -31,7 +31,7 @@
               <input type="submit" value="Login">
             </li>
             <li class="aksi">
-              <a href="#">Daftar</a>
+              <a href="regist.html">Daftar</a>
             </li>
             <li class="aksi">
               <a href="../index.html">Kembali Ke Home</a>
