--- a/menu/login.html
+++ b/menu/login.html
@@ -17,7 +17,7 @@
       <img src="../img/FotoProfilNuruddinInstitue.jpg" alt="Logo Nuruddin Institute">
       <fieldset>
         <legend>Action</legend>
-        <form id="loginForm" action="/login" method="POST" onsubmit="return validateForm()">
+        <form id="loginForm"  method="POST" onsubmit="return validateForm()">
           <ul>
             <li>
               <label for="username">Username/Email</label>
