--- a/menu/regist.html
+++ b/menu/regist.html
@@ -17,7 +17,7 @@
       <img src="../img/FotoProfilNuruddinInstitue.jpg" alt="Logo Nuruddin Institute">
       <fieldset>
         <legend>Action</legend>
-        <form id="loginForm"  action="login.html" method="POST" onsubmit="return validateRegist()">
+        <form id="loginForm"  onsubmit="return validateRegist()">
           <ul>
             <li>
               <label for="username">Nama Lengkap</label>
